2005-06-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* nl/index.html: zinsbouw.

2005-06-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* nl/index.html: various fixes of the Dutch translation. 

2005-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/format-page.py (grab_ihtml): Oops look in topdir too.

2005-05-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: add upgrade link.

	* site/install/windows.html: mention Cygwin.

	* site/install/macos.html:  mention Fink.

	* site/install/menu-entries.py: change entry names. to Fink/Cygwin. 

	* site/install/devel.ihtml: change to .dmg 

2005-05-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* nl/install/*html: Use utf-8.

2005-05-31  Graham Percival  <gperlist@shaw.ca>

	* site/documentation.html: add link to LSR.

2005-05-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* README: reorganize a bit, use <MY-LANGUAGE> for nl.

2005-05-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/format-page.py (grab_gettext*): New functions.

	* site/install/*ihtml: Fix localisations.

2005-05-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* GNUmakefile (upload): encapsulate CVS upload by CVS_COMMIT variable.

2005-05-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: version no. for MacOS installer.

	* site/news.ihtml: separate installer announcement

2005-05-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/graphics/annotate-example-score.svg:
	* site/graphics/annotate-example-single-part.svg: Localise
	hornNotes, bassoonNotes too.  Use variable iso identifier.

	* site/install/devel.ihtml: 
	* site/install/old.ihtml: 
	* site/install/stable.ihtml: Factor out.  Gettextize.

	* scripts/format-page.py (grab_ihtml): Bugfix: also read from
	original site dir.
	(grab_gettext): Remove @@, match plain _("").

	* GNUmakefile (po/newweb.pot): Run xgettext on .IHTMLs too.

	* site/install/index.html: Include.

	* GNUmakefile (apache-1.3.x-fixup): New target.
	(all): Use it.
