@@ -24,15 +24,23 @@ and see for yourself!
 If you have suggestions for the documentation, please be as specific as
 possible.  &ldquo;The docs for lyrics suck!&rdquo; isn't a very useful
 suggestion.  Instead, please tell us exactly what to change and where
-to change it.  For example,
+to change it.  A formal patch to the source code is not required; simply
+send an email to
+<a href="http://mail.gnu.org/mailman/listinfo/lilypond-devel">lilypond-devel@gnu.org</a>
+with your addition to the documentation.  We'll take care of the technical
+details.  For example,
   
 <pre>
+To: lilypond-devel@gnu.org
+From: helpful-user@example.net
+Subject: doc addition for lyrics
+
 http://lilypond.org/doc/v2.4/Documentation/user/out-www/lilypond/Printing-lyrics.html
 In section 2.13 (printing lyrics), above the last line ("More options, like..."),
 please add:
     
 ----
-To add lyrics to a divided part, use foo bar.  For example,
+To add lyrics to a divided part, use blah blah blah.  For example,
 
 \score {
  \notes {blah &#060;&#060;blah&#062;&#062; }
